@@ -88,6 +88,7 @@ zztong_lot_vacant_02,POI,POI,,x,Container Lot,,,,,,,,,,,,,,
 zztong_lot_vacant_03,POI,POI,,x,Car Park,,,,,,,,,,,,,,
 zztong_lot_vacant_04,POI,POI,,x,550 Cedar Swamp Street,,,,,,,,,,,,,,
 zztong_lot_vacant_05,POI,POI,,x,90 Edgefield Avenue,,,,,,,,,,,,,,
+zztong_lot_vacant_06,POI,POI,,x,Playground,,,,,,,,,,,,,,
 zztong_lumber_yard_01,POI,POI,,x,Small Lumber Yard,,,,,,,,,,,,,,
 zztong_masonry_01,POI,POI,,x,Southwest Masonry,,,,,,,,,,,,,,
 zztong_mass_grave_01,POI,POI,,x,Mass Grave,,,,,,,,,,,,,,
@@ -141,6 +142,7 @@ zztong_store_xs_14,POI,POI,,x,Thrift Store,,,,,,,,,,,,,,
 zztong_store_xs_15,POI,POI,,x,Tattoo Store and UPS Store,,,,,,,,,,,,,,
 zztong_store_xs_16,POI,POI,,x,Julio's Grill,,,,,,,,,,,,,,
 zztong_storage_01,POI,POI,,x,UMove Storage,,,,,,,,,,,,,,
+zztong_storage_02,POI,POI,,x,UMove Storage,,,,,,,,,,,,,,
 zztong_stormwater_detention_pond_01,POI,POI,,x,Stormwater Detention Pond,,,,,,,,,,,,,,
 zztong_strip_mall_01,POI,POI,,x,Strip Mall,,,,,,,,,,,,,,
 zztong_strip_mall_02,POI,POI,,x,Strip Mall and OFI Mondays,,,,,,,,,,,,,,
