@@ -1,0 +1,66 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="25, 7, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="POIMarkerSize" value="8, 2, 8#7, 2, 7#1, 3, 6#5, 4, 5#3, 3, 5#4, 4, 7#3, 3, 5" />
+  <property name="POIMarkerStart" value="15, 2, 13#16, 3, 5#11, 3, 11#3, 3, 16#18, 3, 6#17, 3, 14#5, 3, 16" />
+  <property name="POIMarkerGroup" value="two,one,ladder,three,one,two,three" />
+  <property name="POIMarkerTags" value="######" />
+  <property name="POIMarkerType" value="PartSpawn,PartSpawn,PartSpawn,PartSpawn,PartSpawn,PartSpawn,PartSpawn" />
+  <property name="POIMarkerPartToSpawn" value="part_zztong_tfp_playground_sandbox,part_zztong_tfp_playground_merry_go_round,part_zztong_tfp_playground_ladder,part_zztong_tfp_playground_jungle_gym,part_zztong_tfp_swingset_01,part_zztong_tfp_swingset_02,part_zztong_tfp_swingset_01" />
+  <property name="POIMarkerPartRotations" value="3,0,1,0,1,3,1" />
+  <property name="POIMarkerPartSpawnChance" value="0.5,0.5,0.5,0.5,0.5,0.5,1" />
+  <property name="YOffset" value="-3" />
+  <property name="Zoning" value="none" />
+  <property name="EditorGroups" value="rural" />
+  <property name="Tags" value="snow,wasteland,desert,countryresidential,pine_forest" />
+  <property class="Stats">
+    <property name="TotalVertices" value="55136" />
+    <property name="TotalTriangles" value="21075" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="53364" />
+      <property name="Triangles" value="17979" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes6">
+      <property name="Vertices" value="1772" />
+      <property name="Triangles" value="3096" />
+    </property>
+  </property>
+  <property class="IndexedBlockOffsets">
+    <property class="TraderOnOff">
+      <property name="0" value="22, 3, 3" />
+    </property>
+  </property>
+</prefab>
