@@ -1,0 +1,82 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="25, 9, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="EditorGroups" value="rural" />
+  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="YOffset" value="-3" />
+  <property name="Tags" value="snow,wasteland,desert,countryresidential,pine_forest" />
+  <property name="Zoning" value="none" />
+  <property name="POIMarkerSize" value="2, 2, 2#5, 2, 14#3, 3, 1#4, 2, 1#3, 1, 3#5, 13, 1#5, 13, 1" />
+  <property name="POIMarkerStart" value="21, 3, 19#1, 3, 2#13, 3, 7#13, 3, 9#14, 3, 19#19, 2, -1#1, 2, -1" />
+  <property name="POIMarkerGroup" value="delivery,trailer,lab1,lab2,horde,driveway1,driveway2" />
+  <property name="POIMarkerTags" value="#####countryresidential#countryresidential" />
+  <property name="POIMarkerType" value="PartSpawn,PartSpawn,PartSpawn,PartSpawn,PartSpawn,PartSpawn,PartSpawn" />
+  <property name="POIMarkerPartToSpawn" value="part_zztong_delivery_02,part_trailer_sleepers,part_lab_greeble_15,part_lab_greeble_12,part_horde_medium,part_driveway_countryresidential_07,part_driveway_countryresidential_07" />
+  <property name="POIMarkerPartRotations" value="0,3,0,2,0,2,2" />
+  <property name="POIMarkerPartSpawnChance" value="0.5,0.5,0.5,0.5,0.2,1,1" />
+  <property name="SleeperVolumeSize" value="4, 5, 4" />
+  <property name="SleeperVolumeStart" value="8, 3, 19" />
+  <property name="SleeperVolumeGroupId" value="0" />
+  <property name="SleeperVolumeGroup" value="S_-Group_Generic_Zombie,2,3" />
+  <property name="SleeperIsLootVolume" value="False" />
+  <property name="SleeperIsQuestExclude" value="False" />
+  <property name="SleeperVolumeFlags" value="0" />
+  <property name="SleeperVolumeTriggeredBy" value=" " />
+  <property class="Stats">
+    <property name="TotalVertices" value="52191" />
+    <property name="TotalTriangles" value="22914" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="42215" />
+      <property name="Triangles" value="14538" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="8204" />
+      <property name="Triangles" value="5280" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes6">
+      <property name="Vertices" value="1772" />
+      <property name="Triangles" value="3096" />
+    </property>
+  </property>
+  <property class="IndexedBlockOffsets">
+    <property class="POILight">
+      <property name="0" value="18, 5, 12" />
+      <property name="1" value="18, 5, 16" />
+      <property name="2" value="18, 5, 20" />
+    </property>
+    <property class="TraderOnOff">
+      <property name="0" value="17, 3, 12" />
+      <property name="1" value="17, 3, 16" />
+      <property name="2" value="17, 3, 20" />
+    </property>
+  </property>
+</prefab>
