@@ -4,7 +4,8 @@ A21.2.018 (ZZ018)
 * Bug fixes
 * Added restaurant_03, warehouse_04, store_s_03, store_s_04, store_xs_16,
     store_s_05, gyroport_01, tfp_docks_01, tfp_docks_05, lot_vacant_03,
-    lot_vacant_04, trailer_02, trailer_park_04.
+    lot_vacant_04, lot_vacant_05, lot_vacant_06, storage_02, trailer_02,
+    trailer_park_04.
 * Added rwg_tile_gateway_straight_zztong_07, rwg_tile_gateway_t_zztong_02,
     rwg_tile_countryresidential_corner_zztong_01,
     rwg_tile_countryresidential_corner_02, rwg_tile_countryresidential_t_01.
